# contract-rust

./: Cargo.toml  build.bat  build.sh
src/: lib.rs
